syntax = "proto3";
package com.github.influxdata.influxdb.services.storage;
option go_package = ".;storage";

message ReadSource {
  // OrgID specifies the organization identifier for this request.
  uint64 OrgID = 1;

  // BucketID specifies the bucket in the organization.
  uint64 BucketID = 2;
}
